# logging

./: CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml
.github/workflows/: release-pr.yaml  release-publish.yaml
docs/: README.md
docs/reference/liblaf/logging/: README.md
docs/reference/liblaf/logging/filters/: README.md
docs/reference/liblaf/logging/handlers/: README.md
docs/reference/liblaf/logging/handlers/columns/: README.md
docs/reference/liblaf/logging/helpers/: README.md
docs/reference/liblaf/logging/magic/: README.md
src/liblaf/logging/: __init__.py  _config.py  _func.py  _init.py
src/liblaf/logging/filters/: __init__.py  _limits.py
src/liblaf/logging/handlers/: __init__.py  _file.py  _rich.py
src/liblaf/logging/handlers/columns/: __init__.py  _base.py  _level.py  _location.py  _time.py
src/liblaf/logging/helpers/: __init__.py  _autolog.py  _excepthook.py  _lazy.py  _level.py  _logger.py  _printoptions.py  _remove_handlers.py  _sanitize_loggers.py  _setup_rich.py  _unraisablehook.py
src/liblaf/logging/magic/: __init__.py  _frame.py  _release_type.py
src/liblaf/logging/progress/: __init__.py  _progress.py  _speed_column.py
tests/: test_autolog.py  test_config.py  test_frame.py  test_func.py  test_handlers.py  test_hooks.py  test_init.py  test_lazy.py  test_limits_filter.py  test_logger.py  test_printoptions.py  test_public_api.py  test_release_type.py
